<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dp"
    android:background="@drawable/background_color"
    >

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="82dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/main_logo"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:tint="#480905"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/suez_one"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/application_name"
            android:textColor="#480905"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/field_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="8dp"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/username"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/view_color_grey" />

        <EditText
            android:id="@+id/field_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="8dp"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/view_color_grey" />

        <EditText
            android:id="@+id/field_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="8dp"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/view_color_grey" />

        <Button
            android:id="@+id/registerBtn"
            android:background="@drawable/register_button_style"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/register_button"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>